--- a/destination-kilimanjaro.html
+++ b/destination-kilimanjaro.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <title>Mount Kilimanjaro - Kilimora Adventures</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Kilimanjaro, Mountain, Climbing, Hiking, Tanzania" name="keywords">
-    <meta content="Conquer Africa's highest peak, Mount Kilimanjaro, standing at 5,895 meters above sea level."
-        name="description">
+    <meta content="Serengeti, Migration, Safari, Tanzania" name="keywords" content="Kilimanjaro, Mountain, Climbing, Hiking, Tanzania">
+    <meta content="Experience the endless plains of Serengeti National Park and the Great Migration."
+        name="description" content="Conquer Africa's highest peak, Mount Kilimanjaro, standing at 5,895 meters above sea level.">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -339,18 +339,15 @@
             </div>
         </nav>
     </div>
-
     <div class="container-fluid bg-primary py-5 mb-5 hero-header"
-        style="background: linear-gradient(rgba(20, 20, 31, .7), rgba(20, 20, 31, .7)), url(img/kilimanjaro1.jpg); background-position: center center; background-repeat: no-repeat; background-size: cover;">
+        style="background: linear-gradient(rgba(20, 20, 31, .7), rgba(20, 20, 31, .7)), url(img/kilimanjaro2.jpg); background-position: center center; background-repeat: no-repeat; background-size: cover;">
         <div class="container py-5">
             <div class="row justify-content-start py-5">
                 <div class="col-lg-6 pt-lg-5 mt-lg-5 text-start">
-                    <h6 class="text-white mb-2 animated slideInDown" style="letter-spacing: 2px;">MOUNT KILIMANJARO
+                    <h6 class="text-white mb-2 animated slideInDown" style="letter-spacing: 2px;">SERENEGETI
                         DESTINATIONS</h6>
                     <h1 class="text-white mb-3 animated slideInDown" style="font-size: 3rem;">MOUNT KILIMANJARO</h1>
-                    <p class="fs-6 text-white mb-4 animated slideInDown">
-                        Conquer Africa's highest peak, Mount Kilimanjaro, standing majestically at 5,895 meters above sea level.
-                    </p>
+                    <p class="fs-6 text-white mb-4 animated slideInDown">Conquer Africa's highest peak, Mount Kilimanjaro, standing majestically at 5,895 meters above sea level. It is the world's highest free-standing mountain.</p>
                 </div>
             </div>
         </div>
@@ -366,7 +363,7 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="img-border">
-                        <img class="img-fluid" src="img/twiga.jpg" alt="Serengeti Map">
+                        <img class="img-fluid" src="img/kilimanjaro3.jpg" alt="Serengeti Map">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
@@ -375,15 +372,14 @@
                             <span class="section-title-line"></span>
                             <h2 class="mb-0">About Mount Kilimanjaro</h2>
                         </div>
-                        <p class="mb-4">Mount Kilimanjaro is Africa's highest mountain, standing at 5,895 meters (19,341 feet) above sea level. Located in northeastern Tanzania, this dormant volcano is one of the world's most accessible high summits and attracts thousands of climbers each year.</p>
-                        <p class="mb-4">The mountain has three volcanic cones: Kibo, Mawenzi, and Shira. Kilimanjaro is a UNESCO World Heritage Site and offers several climbing routes, each providing unique experiences and varying difficulty levels. The climb takes you through five distinct climate zones, from tropical rainforest to arctic summit.</p>
-                    </div>
+                        <p class="mb-4">Mount Kilimanjaro is Africa's highest mountain, standing at 5,895 meters (19,341 feet) above sea level. Located in northeastern Tanzania, this dormant volcano is one of the world's most accessible high summits.</p>
+                        <p class="mb-4">The mountain has three volcanic cones: Kibo, Mawenzi, and Shira. The climb takes you through five distinct climate zones, from cultivated land and rainforest to moorland, alpine desert, and finally the arctic summit.</p></div>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- Highlights Section -->
+        <!-- Highlights Section -->
     <div class="container-xxl py-5 bg-light">
         <div class="container">
             <div class="d-flex align-items-center mb-5">
@@ -393,37 +389,37 @@
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="icon-box text-center">
-                        <i class="fa fa-paw"></i>
+                        <i class="fa fa-flag"></i>
                         <h5>Uhuru Peak</h5>
                         <p class="mb-0">Reach the highest point in Africa at 5,895 meters.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="icon-box text-center">
-                        <i class="fa fa-camera"></i>
-                        <h5>Big 5 Safari</h5>
-                        <p class="mb-0">Home to Lions, Leopards, Elephants, Buffalo, and Rhinos.</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="icon-box text-center">
                         <i class="fa fa-globe"></i>
                         <h5>Five Climate Zones</h5>
                         <p class="mb-0">Experience diverse ecosystems from rainforest to arctic.</p>
                     </div>
                 </div>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="icon-box text-center">
+                        <i class="fa fa-camera"></i>
+                        <h5>Volcanic Cones</h5>
+                        <p class="mb-0">View Kibo, Mawenzi, and Shira cones.</p>
+                    </div>
+                </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                     <div class="icon-box text-center">
-                        <i class="fa fa-cloud"></i>
-                        <h5>Balloon Safaris</h5>
-                        <p class="mb-0">Float over the plains at sunrise for a unique perspective.</p>
+                        <i class="fa fa-map-signs"></i>
+                        <h5>Scenic Routes</h5>
+                        <p class="mb-0">Choose from Lemosho, Machame, Marangu and more.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.9s">
                     <div class="icon-box text-center">
-                        <i class="fa fa-binoculars"></i>
-                        <h5>Bird Watching</h5>
-                        <p class="mb-0">Over 500 bird species recorded in the park.</p>
+                        <i class="fa fa-paw"></i>
+                        <h5>Colobus Monkeys</h5>
+                        <p class="mb-0">Spot wildlife in the lower rainforest slopes.</p>
                     </div>
                 </div>
             </div>
@@ -441,7 +437,7 @@
                 <!-- Tour Item 1 -->
                 <div class="package-item">
                     <div class="overflow-hidden dest-img-container">
-                        <img class="img-fluid" src="img/t4.jpg" alt="">
+                        <img class="img-fluid" src="img/kilimanjaro2.jpg" alt="">
                     </div>
                     <div class="p-4">
                         <h5 class="mb-0">3 Days Classic Serengeti Safari</h5>
@@ -459,7 +455,7 @@
                 <!-- Tour Item 2 -->
                 <div class="package-item">
                     <div class="overflow-hidden dest-img-container">
-                        <img class="img-fluid" src="img/t2.jpg" alt="">
+                        <img class="img-fluid" src="img/pro3.jpg" alt="">
                     </div>
                     <div class="p-4">
                         <h5 class="mb-0">4 Day Serengeti Safari Game Package</h5>
@@ -477,7 +473,7 @@
                 <!-- Tour Item 3 -->
                 <div class="package-item">
                     <div class="overflow-hidden dest-img-container">
-                        <img class="img-fluid" src="img/se.jpg" alt="">
+                        <img class="img-fluid" src="img/kilimanjaro3.jpg" alt="">
                     </div>
                     <div class="p-4">
                         <h5 class="mb-0">5 Days Great Migration Safari</h5>
@@ -561,7 +557,7 @@
                     Combine with Nearby Destinations
                 </h2>
                 <p class="dest-subtitle">
-                    Extend your safari adventure by visiting these iconic destinations near Serengeti.
+                    After your climb, relax by visiting these iconic destinations in Tanzania.
                 </p>
             </div>
 
@@ -569,7 +565,7 @@
             <div class="row align-items-center mb-5">
                 <div class="col-lg-6 position-relative">
                     <img src="img/ngo.jpg" class="img-fluid rounded main-img" alt="Ngorongoro Crater">
-                    <img src="img/ngoro22.jpeg" class="img-fluid rounded small-img shadow-lg" alt="Ngorongoro View">
+
                 </div>
                 <div class="col-lg-6">
                     <h3 class="dest-country">Ngorongoro Crater</h3>
@@ -587,7 +583,7 @@
             <div class="row align-items-center mb-5 flex-lg-row-reverse">
                 <div class="col-lg-6 position-relative">
                     <img src="img/treelion.jpg" class="img-fluid rounded main-img" alt="Tree Climbing Lions">
-                    <img src="img/destination-4.jpg" class="img-fluid rounded small-img shadow-lg" alt="Lake Manyara">
+
                 </div>
                 <div class="col-lg-6">
                     <h3 class="dest-country">Lake Manyara</h3>
@@ -605,7 +601,7 @@
             <div class="row align-items-center mb-5">
                 <div class="col-lg-6 position-relative">
                     <img src="img/tarangire.jpg" class="img-fluid rounded main-img" alt="Tarangire Elephants">
-                    <img src="img/tembo.jpg" class="img-fluid rounded small-img shadow-lg" alt="Baobab Area">
+
                 </div>
                 <div class="col-lg-6">
                     <h3 class="dest-country">Tarangire National Park</h3>
@@ -623,7 +619,7 @@
             <div class="row align-items-center mb-5 flex-lg-row-reverse">
                 <div class="col-lg-6 position-relative">
                     <img src="img/beach.jpg" class="img-fluid rounded main-img" alt="Zanzibar Beach">
-                    <img src="img/kili.jpg" class="img-fluid rounded small-img shadow-lg" alt="Stone Town">
+
                 </div>
                 <div class="col-lg-6">
                     <h3 class="dest-country">Zanzibar Island</h3>
@@ -640,7 +636,7 @@
         </div>
     </section>
 
-    <!-- FAQ Section -->
+        <!-- FAQ Section -->
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
@@ -651,50 +647,44 @@
                 <div class="col-lg-10">
                     <div class="accordion" id="accordionExample">
                         <div class="accordion-item">
-                            <h2 class="accordion-header" id="headingOne">
-                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                    When is the best time to visit Serengeti?
+                            <h2 class="accordion-header" id="heading1">
+                                <button class="accordion-button " type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapse1" aria-expanded="true" aria-controls="collapse1">
+                                    What is the best time to climb Kilimanjaro?
                                 </button>
                             </h2>
-                            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                            <div id="collapse1" class="accordion-collapse collapse show" aria-labelledby="heading1"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    The best time depends on what you want to see. For the <strong>Great Migration river
-                                        crossings</strong>, June to October is ideal (North). For <strong>calving
-                                        season</strong> (baby wildebeest), visiting Ndutu (South) from January to March
-                                    is recommended.
+                                    The best times are the warm and dry months: <strong>January to March</strong> and <strong>June to October</strong>.
                                 </div>
                             </div>
                         </div>
                         <div class="accordion-item">
-                            <h2 class="accordion-header" id="headingTwo">
+                            <h2 class="accordion-header" id="heading2">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                    How many days do I need?
+                                    data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
+                                    How many days does it take to climb?
                                 </button>
                             </h2>
-                            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                            <div id="collapse2" class="accordion-collapse collapse " aria-labelledby="heading2"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    We recommend at least <strong>3 to 4 days</strong> to truly appreciate the vastness
-                                    of the Serengeti and increase your chances of seeing the Big 5 and the Migration.
+                                    Most routes take between <strong>5 to 9 days</strong>. We recommend longer routes (7+ days) for better acclimatization.
                                 </div>
                             </div>
                         </div>
                         <div class="accordion-item">
-                            <h2 class="accordion-header" id="headingThree">
+                            <h2 class="accordion-header" id="heading3">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                    What is the "Big 5"?
+                                    data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
+                                    Do I need technical climbing skills?
                                 </button>
                             </h2>
-                            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                            <div id="collapse3" class="accordion-collapse collapse " aria-labelledby="heading3"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    The "Big 5" refers to the Lion, Leopard, Rhinoceros, Elephant, and Cape Buffalo. The
-                                    Serengeti is one of the few places where you can see all of them in their natural
-                                    habitat.
+                                    <strong>No</strong>, Kilimanjaro is a "walk-up" mountain. You do not need technical climbing gears, but good physical fitness is essential.
                                 </div>
                             </div>
                         </div>
@@ -704,7 +694,7 @@
         </div>
     </div>
 
-        <!-- Footer Start -->
+    <!-- Footer Start -->
     <!-- Awards Section (Auto Scrolling) -->
     <section class="py-5" style="background:#fff;">
         <div class="container text-center mb-4">
