--- a/destination-manyara.html
+++ b/destination-manyara.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <title>Lake Manyara National Park - Kilimora Adventures</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Lake Manyara, Tree-climbing Lions, Flamingos, Safari, Tanzania" name="keywords">
-    <meta content="Discover Lake Manyara National Park, famous for tree-climbing lions and spectacular birdlife."
-        name="description">
+    <meta content="Serengeti, Migration, Safari, Tanzania" name="keywords" content="Lake Manyara, Tree-climbing Lions, Flamingos, Safari, Tanzania">
+    <meta content="Experience the endless plains of Serengeti National Park and the Great Migration."
+        name="description" content="Discover Lake Manyara National Park, famous for tree-climbing lions and spectacular birdlife.">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -339,18 +339,15 @@
             </div>
         </nav>
     </div>
-
     <div class="container-fluid bg-primary py-5 mb-5 hero-header"
         style="background: linear-gradient(rgba(20, 20, 31, .7), rgba(20, 20, 31, .7)), url(img/treelion.jpg); background-position: center center; background-repeat: no-repeat; background-size: cover;">
         <div class="container py-5">
             <div class="row justify-content-start py-5">
                 <div class="col-lg-6 pt-lg-5 mt-lg-5 text-start">
-                    <h6 class="text-white mb-2 animated slideInDown" style="letter-spacing: 2px;">LAKE MANYARA
+                    <h6 class="text-white mb-2 animated slideInDown" style="letter-spacing: 2px;">SERENEGETI
                         DESTINATIONS</h6>
                     <h1 class="text-white mb-3 animated slideInDown" style="font-size: 3rem;">LAKE MANYARA</h1>
-                    <p class="fs-6 text-white mb-4 animated slideInDown">
-                        Discover Lake Manyara National Park, famous for its unique tree-climbing lions and vibrant flamingo populations.
-                    </p>
+                    <p class="fs-6 text-white mb-4 animated slideInDown">Discover Lake Manyara National Park, famous for its unique tree-climbing lions and vibrant flamingo populations painting the lake pink.</p>
                 </div>
             </div>
         </div>
@@ -366,7 +363,7 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="img-border">
-                        <img class="img-fluid" src="img/twiga.jpg" alt="Serengeti Map">
+                        <img class="img-fluid" src="img/destination-4.jpg" alt="Serengeti Map">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
@@ -376,14 +373,13 @@
                             <h2 class="mb-0">About Lake Manyara</h2>
                         </div>
                         <p class="mb-4">Lake Manyara National Park is a protected area in Tanzania's Arusha and Manyara Regions, covering an area of 325 square kilometers. The park is famous for its unique tree-climbing lions and large flocks of flamingos that paint the lake pink.</p>
-                        <p class="mb-4">The park offers a diverse landscape including groundwater forests, acacia woodlands, and the alkaline soda lake itself. It is home to over 400 bird species and provides excellent opportunities for birdwatching and photography. The park also hosts elephants, hippos, giraffes, and various antelope species.</p>
-                    </div>
+                        <p class="mb-4">The park offers a diverse landscape including groundwater forests, acacia woodlands, and the alkaline soda lake itself. It is home to over 400 bird species and provides excellent opportunities for birdwatching and photography.</p></div>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- Highlights Section -->
+        <!-- Highlights Section -->
     <div class="container-xxl py-5 bg-light">
         <div class="container">
             <div class="d-flex align-items-center mb-5">
@@ -395,35 +391,35 @@
                     <div class="icon-box text-center">
                         <i class="fa fa-paw"></i>
                         <h5>Tree-Climbing Lions</h5>
-                        <p class="mb-0">Witness the rare sight of lions resting in acacia trees.</p>
+                        <p class="mb-0">Witness the rare behavior of lions resting in trees.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="icon-box text-center">
                         <i class="fa fa-camera"></i>
-                        <h5>Big 5 Safari</h5>
-                        <p class="mb-0">Home to Lions, Leopards, Elephants, Buffalo, and Rhinos.</p>
+                        <h5>Flamingos</h5>
+                        <p class="mb-0">Thousands of pink flamingos covering the alkaline lake.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="icon-box text-center">
                         <i class="fa fa-globe"></i>
-                        <h5>Flamingo Spectacle</h5>
-                        <p class="mb-0">Thousands of flamingos create a pink carpet on the lake.</p>
+                        <h5>Groundwater Forest</h5>
+                        <p class="mb-0">Lush forests fed by underground springs.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                     <div class="icon-box text-center">
                         <i class="fa fa-cloud"></i>
-                        <h5>Balloon Safaris</h5>
-                        <p class="mb-0">Float over the plains at sunrise for a unique perspective.</p>
+                        <h5>Bird Watching</h5>
+                        <p class="mb-0">Over 400 species including pelicans and storks.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.9s">
                     <div class="icon-box text-center">
                         <i class="fa fa-binoculars"></i>
-                        <h5>Bird Watching</h5>
-                        <p class="mb-0">Over 500 bird species recorded in the park.</p>
+                        <h5>Baboon Troops</h5>
+                        <p class="mb-0">Large troops of olive baboons in the forests.</p>
                     </div>
                 </div>
             </div>
@@ -441,7 +437,7 @@
                 <!-- Tour Item 1 -->
                 <div class="package-item">
                     <div class="overflow-hidden dest-img-container">
-                        <img class="img-fluid" src="img/t4.jpg" alt="">
+                        <img class="img-fluid" src="img/treelion.jpg" alt="">
                     </div>
                     <div class="p-4">
                         <h5 class="mb-0">3 Days Classic Serengeti Safari</h5>
@@ -459,7 +455,7 @@
                 <!-- Tour Item 2 -->
                 <div class="package-item">
                     <div class="overflow-hidden dest-img-container">
-                        <img class="img-fluid" src="img/t2.jpg" alt="">
+                        <img class="img-fluid" src="img/pro3.jpg" alt="">
                     </div>
                     <div class="p-4">
                         <h5 class="mb-0">4 Day Serengeti Safari Game Package</h5>
@@ -477,7 +473,7 @@
                 <!-- Tour Item 3 -->
                 <div class="package-item">
                     <div class="overflow-hidden dest-img-container">
-                        <img class="img-fluid" src="img/se.jpg" alt="">
+                        <img class="img-fluid" src="img/ndege6.jpeg" alt="">
                     </div>
                     <div class="p-4">
                         <h5 class="mb-0">5 Days Great Migration Safari</h5>
@@ -561,43 +557,26 @@
                     Combine with Nearby Destinations
                 </h2>
                 <p class="dest-subtitle">
-                    Extend your safari adventure by visiting these iconic destinations near Serengeti.
+                    Extend your safari adventure by visiting these iconic destinations near Lake Manyara.
                 </p>
             </div>
 
             <!-- Ngorongoro Block -->
-            <div class="row align-items-center mb-5">
-                <div class="col-lg-6 position-relative">
-                    <img src="img/ngo.jpg" class="img-fluid rounded main-img" alt="Ngorongoro Crater">
-                    <img src="img/ngoro22.jpeg" class="img-fluid rounded small-img shadow-lg" alt="Ngorongoro View">
-                </div>
-                <div class="col-lg-6">
-                    <h3 class="dest-country">Ngorongoro Crater</h3>
-                    <div class="dest-underline"></div>
-                    <p class="dest-text">
-                        Descend into the world's largest inactive volcanic caldera, a natural amphitheater teeming with
-                        wildlife. The Ngorongoro Crater is a UNESCO World Heritage Site where you can witness the Big 5
-                        in a single day against a backdrop of stunning geological formations.
-                    </p>
-                    <a href="destination-kenya.html" class="dest-btn">â†’ EXPLORE NGORONGORO</a>
-                </div>
-            </div>
-
-            <!-- Lake Manyara Block -->
+            
+            <!-- Serengeti Block -->
             <div class="row align-items-center mb-5 flex-lg-row-reverse">
                 <div class="col-lg-6 position-relative">
-                    <img src="img/treelion.jpg" class="img-fluid rounded main-img" alt="Tree Climbing Lions">
-                    <img src="img/destination-4.jpg" class="img-fluid rounded small-img shadow-lg" alt="Lake Manyara">
+                    <img src="img/nyumbu-migrate.jpeg" class="img-fluid rounded main-img" alt="Serengeti Plains">
+                    <img src="img/simba.jpg" class="img-fluid rounded small-img shadow-lg" alt="Lion">
                 </div>
                 <div class="col-lg-6">
-                    <h3 class="dest-country">Lake Manyara</h3>
+                    <h3 class="dest-country">Serengeti National Park</h3>
                     <div class="dest-underline"></div>
                     <p class="dest-text">
-                        Famous for its unique tree-climbing lions and vast flocks of flamingos painting the lake pink.
-                        Lake Manyara National Park offers a diverse landscape of groundwater forests, acacia woodlands,
-                        and the soda lake itself, perfect for birdwatching and photography.
+                        The endless plains of the Serengeti are the stage for the Great Migration. Witness millions of
+                        wildebeest, zebras, and predators in this world-renowned ecosystem.
                     </p>
-                    <a href="#" class="dest-btn">â†’ EXPLORE MANYARA</a>
+                    <a href="destination-serengeti.html" class="dest-btn">→ EXPLORE SERENGETI</a>
                 </div>
             </div>
 
@@ -605,7 +584,7 @@
             <div class="row align-items-center mb-5">
                 <div class="col-lg-6 position-relative">
                     <img src="img/tarangire.jpg" class="img-fluid rounded main-img" alt="Tarangire Elephants">
-                    <img src="img/tembo.jpg" class="img-fluid rounded small-img shadow-lg" alt="Baobab Area">
+
                 </div>
                 <div class="col-lg-6">
                     <h3 class="dest-country">Tarangire National Park</h3>
@@ -623,7 +602,7 @@
             <div class="row align-items-center mb-5 flex-lg-row-reverse">
                 <div class="col-lg-6 position-relative">
                     <img src="img/beach.jpg" class="img-fluid rounded main-img" alt="Zanzibar Beach">
-                    <img src="img/kili.jpg" class="img-fluid rounded small-img shadow-lg" alt="Stone Town">
+
                 </div>
                 <div class="col-lg-6">
                     <h3 class="dest-country">Zanzibar Island</h3>
@@ -640,7 +619,7 @@
         </div>
     </section>
 
-    <!-- FAQ Section -->
+        <!-- FAQ Section -->
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
@@ -651,50 +630,44 @@
                 <div class="col-lg-10">
                     <div class="accordion" id="accordionExample">
                         <div class="accordion-item">
-                            <h2 class="accordion-header" id="headingOne">
-                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                    When is the best time to visit Serengeti?
+                            <h2 class="accordion-header" id="heading1">
+                                <button class="accordion-button " type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapse1" aria-expanded="true" aria-controls="collapse1">
+                                    What is special about Lake Manyara?
                                 </button>
                             </h2>
-                            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                            <div id="collapse1" class="accordion-collapse collapse show" aria-labelledby="heading1"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    The best time depends on what you want to see. For the <strong>Great Migration river
-                                        crossings</strong>, June to October is ideal (North). For <strong>calving
-                                        season</strong> (baby wildebeest), visiting Ndutu (South) from January to March
-                                    is recommended.
+                                    Lake Manyara is famous for its <strong>tree-climbing lions</strong>, vast flocks of <strong>flamingos</strong>, and diverse landscape.
                                 </div>
                             </div>
                         </div>
                         <div class="accordion-item">
-                            <h2 class="accordion-header" id="headingTwo">
+                            <h2 class="accordion-header" id="heading2">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                    How many days do I need?
+                                    data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
+                                    When is the best time for bird watching?
                                 </button>
                             </h2>
-                            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                            <div id="collapse2" class="accordion-collapse collapse " aria-labelledby="heading2"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    We recommend at least <strong>3 to 4 days</strong> to truly appreciate the vastness
-                                    of the Serengeti and increase your chances of seeing the Big 5 and the Migration.
+                                    For bird watching, the <strong>wet season (November to May)</strong> is ideal as migratory birds arrive and the lake is full.
                                 </div>
                             </div>
                         </div>
                         <div class="accordion-item">
-                            <h2 class="accordion-header" id="headingThree">
+                            <h2 class="accordion-header" id="heading3">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                    What is the "Big 5"?
+                                    data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
+                                    Can I do a day trip to Lake Manyara?
                                 </button>
                             </h2>
-                            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                            <div id="collapse3" class="accordion-collapse collapse " aria-labelledby="heading3"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    The "Big 5" refers to the Lion, Leopard, Rhinoceros, Elephant, and Cape Buffalo. The
-                                    Serengeti is one of the few places where you can see all of them in their natural
-                                    habitat.
+                                    <strong>Yes</strong>, due to its proximity to Arusha (approx. 1.5 - 2 hours), Lake Manyara is perfect for a day trip.
                                 </div>
                             </div>
                         </div>
@@ -704,7 +677,7 @@
         </div>
     </div>
 
-        <!-- Footer Start -->
+    <!-- Footer Start -->
     <!-- Awards Section (Auto Scrolling) -->
     <section class="py-5" style="background:#fff;">
         <div class="container text-center mb-4">
