--- a/destination-mikumi.html
+++ b/destination-mikumi.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <title>Mikumi National Park - Kilimora Adventures</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Mikumi, Wildlife, Safari, National Park, Tanzania" name="keywords">
-    <meta content="Explore Mikumi National Park, Tanzania's fourth-largest national park with abundant wildlife."
-        name="description">
+    <meta content="Serengeti, Migration, Safari, Tanzania" name="keywords" content="Mikumi, Wildlife, Safari, National Park, Tanzania">
+    <meta content="Experience the endless plains of Serengeti National Park and the Great Migration."
+        name="description" content="Explore Mikumi National Park, Tanzania's fourth-largest national park with abundant wildlife.">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -339,18 +339,15 @@
             </div>
         </nav>
     </div>
-
     <div class="container-fluid bg-primary py-5 mb-5 hero-header"
         style="background: linear-gradient(rgba(20, 20, 31, .7), rgba(20, 20, 31, .7)), url(img/mix.jpg); background-position: center center; background-repeat: no-repeat; background-size: cover;">
         <div class="container py-5">
             <div class="row justify-content-start py-5">
                 <div class="col-lg-6 pt-lg-5 mt-lg-5 text-start">
-                    <h6 class="text-white mb-2 animated slideInDown" style="letter-spacing: 2px;">MIKUMI
+                    <h6 class="text-white mb-2 animated slideInDown" style="letter-spacing: 2px;">SERENEGETI
                         DESTINATIONS</h6>
                     <h1 class="text-white mb-3 animated slideInDown" style="font-size: 3rem;">MIKUMI</h1>
-                    <p class="fs-6 text-white mb-4 animated slideInDown">
-                        Explore Mikumi National Park, Tanzania's fourth-largest park with abundant wildlife and stunning landscapes.
-                    </p>
+                    <p class="fs-6 text-white mb-4 animated slideInDown">Explore Mikumi National Park, Tanzania's fourth-largest park with abundant wildlife and stunning landscapes, often called "The Little Serengeti".</p>
                 </div>
             </div>
         </div>
@@ -366,7 +363,7 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="img-border">
-                        <img class="img-fluid" src="img/twiga.jpg" alt="Serengeti Map">
+                        <img class="img-fluid" src="img/pundamilia.jpeg" alt="Serengeti Map">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
@@ -375,15 +372,14 @@
                             <span class="section-title-line"></span>
                             <h2 class="mb-0">About Mikumi</h2>
                         </div>
-                        <p class="mb-4">Mikumi National Park is Tanzania's fourth-largest national park, covering an area of 3,230 square kilometers. Located between the Uluguru Mountains and the Lumango range, the park is part of a much larger ecosystem centered on the Selous Game Reserve.</p>
-                        <p class="mb-4">The park is characterized by its Mkata Floodplain, which is often compared to the Serengeti plains due to its open horizons and abundant wildlife. Mikumi hosts buffaloes, giraffes, elephants, lions, pythons, zebras, leopards, crocodiles, and various bird species, making it an excellent destination for wildlife viewing.</p>
-                    </div>
+                        <p class="mb-4">Mikumi National Park is Tanzania's fourth-largest national park, covering an area of 3,230 square kilometers. Located between the Uluguru Mountains and the Lumango range.</p>
+                        <p class="mb-4">The park is characterized by its Mkata Floodplain, which is often compared to the Serengeti plains due to its open horizons and abundant wildlife including lions, elephants, buffaloes, and zebras.</p></div>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- Highlights Section -->
+        <!-- Highlights Section -->
     <div class="container-xxl py-5 bg-light">
         <div class="container">
             <div class="d-flex align-items-center mb-5">
@@ -393,37 +389,37 @@
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="icon-box text-center">
-                        <i class="fa fa-paw"></i>
+                        <i class="fa fa-globe"></i>
                         <h5>Mkata Floodplain</h5>
                         <p class="mb-0">Open savanna plains teeming with diverse wildlife.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="icon-box text-center">
-                        <i class="fa fa-camera"></i>
-                        <h5>Big 5 Safari</h5>
-                        <p class="mb-0">Home to Lions, Leopards, Elephants, Buffalo, and Rhinos.</p>
+                        <i class="fa fa-paw"></i>
+                        <h5>Big Game</h5>
+                        <p class="mb-0">Home to lions, elephants, buffaloes and giraffes.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="icon-box text-center">
-                        <i class="fa fa-globe"></i>
+                        <i class="fa fa-road"></i>
                         <h5>Accessible Safari</h5>
-                        <p class="mb-0">Close proximity to Dar es Salaam makes it easily accessible.</p>
+                        <p class="mb-0">Easily accessible from Dar es Salaam (4-5 hours).</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                     <div class="icon-box text-center">
-                        <i class="fa fa-cloud"></i>
-                        <h5>Balloon Safaris</h5>
-                        <p class="mb-0">Float over the plains at sunrise for a unique perspective.</p>
+                        <i class="fa fa-binoculars"></i>
+                        <h5>Bird Life</h5>
+                        <p class="mb-0">Over 400 bird species recorded in the park.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.9s">
                     <div class="icon-box text-center">
-                        <i class="fa fa-binoculars"></i>
-                        <h5>Bird Watching</h5>
-                        <p class="mb-0">Over 500 bird species recorded in the park.</p>
+                        <i class="fa fa-water"></i>
+                        <h5>Hippo Pools</h5>
+                        <p class="mb-0">View hippos and crocodiles close to the main gate.</p>
                     </div>
                 </div>
             </div>
@@ -441,7 +437,7 @@
                 <!-- Tour Item 1 -->
                 <div class="package-item">
                     <div class="overflow-hidden dest-img-container">
-                        <img class="img-fluid" src="img/t4.jpg" alt="">
+                        <img class="img-fluid" src="img/mix.jpg" alt="">
                     </div>
                     <div class="p-4">
                         <h5 class="mb-0">3 Days Classic Serengeti Safari</h5>
@@ -459,7 +455,7 @@
                 <!-- Tour Item 2 -->
                 <div class="package-item">
                     <div class="overflow-hidden dest-img-container">
-                        <img class="img-fluid" src="img/t2.jpg" alt="">
+                        <img class="img-fluid" src="img/pro3.jpg" alt="">
                     </div>
                     <div class="p-4">
                         <h5 class="mb-0">4 Day Serengeti Safari Game Package</h5>
@@ -477,7 +473,7 @@
                 <!-- Tour Item 3 -->
                 <div class="package-item">
                     <div class="overflow-hidden dest-img-container">
-                        <img class="img-fluid" src="img/se.jpg" alt="">
+                        <img class="img-fluid" src="img/pundamilia.jpeg" alt="">
                     </div>
                     <div class="p-4">
                         <h5 class="mb-0">5 Days Great Migration Safari</h5>
@@ -561,7 +557,7 @@
                     Combine with Nearby Destinations
                 </h2>
                 <p class="dest-subtitle">
-                    Extend your safari adventure by visiting these iconic destinations near Serengeti.
+                    Combine your Mikumi safari with these other Tanzanian destinations.
                 </p>
             </div>
 
@@ -569,7 +565,7 @@
             <div class="row align-items-center mb-5">
                 <div class="col-lg-6 position-relative">
                     <img src="img/ngo.jpg" class="img-fluid rounded main-img" alt="Ngorongoro Crater">
-                    <img src="img/ngoro22.jpeg" class="img-fluid rounded small-img shadow-lg" alt="Ngorongoro View">
+
                 </div>
                 <div class="col-lg-6">
                     <h3 class="dest-country">Ngorongoro Crater</h3>
@@ -587,7 +583,7 @@
             <div class="row align-items-center mb-5 flex-lg-row-reverse">
                 <div class="col-lg-6 position-relative">
                     <img src="img/treelion.jpg" class="img-fluid rounded main-img" alt="Tree Climbing Lions">
-                    <img src="img/destination-4.jpg" class="img-fluid rounded small-img shadow-lg" alt="Lake Manyara">
+
                 </div>
                 <div class="col-lg-6">
                     <h3 class="dest-country">Lake Manyara</h3>
@@ -605,7 +601,7 @@
             <div class="row align-items-center mb-5">
                 <div class="col-lg-6 position-relative">
                     <img src="img/tarangire.jpg" class="img-fluid rounded main-img" alt="Tarangire Elephants">
-                    <img src="img/tembo.jpg" class="img-fluid rounded small-img shadow-lg" alt="Baobab Area">
+
                 </div>
                 <div class="col-lg-6">
                     <h3 class="dest-country">Tarangire National Park</h3>
@@ -623,7 +619,7 @@
             <div class="row align-items-center mb-5 flex-lg-row-reverse">
                 <div class="col-lg-6 position-relative">
                     <img src="img/beach.jpg" class="img-fluid rounded main-img" alt="Zanzibar Beach">
-                    <img src="img/kili.jpg" class="img-fluid rounded small-img shadow-lg" alt="Stone Town">
+
                 </div>
                 <div class="col-lg-6">
                     <h3 class="dest-country">Zanzibar Island</h3>
@@ -640,7 +636,7 @@
         </div>
     </section>
 
-    <!-- FAQ Section -->
+        <!-- FAQ Section -->
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
@@ -651,50 +647,44 @@
                 <div class="col-lg-10">
                     <div class="accordion" id="accordionExample">
                         <div class="accordion-item">
-                            <h2 class="accordion-header" id="headingOne">
-                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                    When is the best time to visit Serengeti?
+                            <h2 class="accordion-header" id="heading1">
+                                <button class="accordion-button " type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapse1" aria-expanded="true" aria-controls="collapse1">
+                                    How do I get to Mikumi National Park?
                                 </button>
                             </h2>
-                            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                            <div id="collapse1" class="accordion-collapse collapse show" aria-labelledby="heading1"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    The best time depends on what you want to see. For the <strong>Great Migration river
-                                        crossings</strong>, June to October is ideal (North). For <strong>calving
-                                        season</strong> (baby wildebeest), visiting Ndutu (South) from January to March
-                                    is recommended.
+                                    Mikumi is very accessible. It is about a <strong>4-5 hour drive</strong> from Dar es Salaam on a good tarmac road.
                                 </div>
                             </div>
                         </div>
                         <div class="accordion-item">
-                            <h2 class="accordion-header" id="headingTwo">
+                            <h2 class="accordion-header" id="heading2">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                    How many days do I need?
+                                    data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
+                                    When is the best time to visit Mikumi?
                                 </button>
                             </h2>
-                            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                            <div id="collapse2" class="accordion-collapse collapse " aria-labelledby="heading2"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    We recommend at least <strong>3 to 4 days</strong> to truly appreciate the vastness
-                                    of the Serengeti and increase your chances of seeing the Big 5 and the Migration.
+                                    The dry season from <strong>June to October</strong> is best for wildlife viewing as vegetation is thinner.
                                 </div>
                             </div>
                         </div>
                         <div class="accordion-item">
-                            <h2 class="accordion-header" id="headingThree">
+                            <h2 class="accordion-header" id="heading3">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                    What is the "Big 5"?
+                                    data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
+                                    What animals can I expect to see?
                                 </button>
                             </h2>
-                            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                            <div id="collapse3" class="accordion-collapse collapse " aria-labelledby="heading3"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    The "Big 5" refers to the Lion, Leopard, Rhinoceros, Elephant, and Cape Buffalo. The
-                                    Serengeti is one of the few places where you can see all of them in their natural
-                                    habitat.
+                                    You can see the Mkata Floodplain ecosystem which supports elands, buffaloes, zebras, giraffes, elephants, lions, and leopards.
                                 </div>
                             </div>
                         </div>
@@ -704,7 +694,7 @@
         </div>
     </div>
 
-        <!-- Footer Start -->
+    <!-- Footer Start -->
     <!-- Awards Section (Auto Scrolling) -->
     <section class="py-5" style="background:#fff;">
         <div class="container text-center mb-4">
