--- a/destination-serengeti.html
+++ b/destination-serengeti.html
@@ -448,7 +448,7 @@
                 <!-- Tour Item 1 -->
                 <div class="package-item">
                     <div class="overflow-hidden dest-img-container">
-                        <img class="img-fluid" src="img/t4.jpg" alt="">
+                        <img class="img-fluid" src="img/nyumbu-migrate.jpeg" alt="">
                     </div>
                     <div class="p-4">
                         <h5 class="mb-0">3 Days Classic Serengeti Safari</h5>
@@ -466,7 +466,7 @@
                 <!-- Tour Item 2 -->
                 <div class="package-item">
                     <div class="overflow-hidden dest-img-container">
-                        <img class="img-fluid" src="img/t2.jpg" alt="">
+                        <img class="img-fluid" src="img/pro3.jpg" alt="">
                     </div>
                     <div class="p-4">
                         <h5 class="mb-0">4 Day Serengeti Safari Game Package</h5>
@@ -484,7 +484,7 @@
                 <!-- Tour Item 3 -->
                 <div class="package-item">
                     <div class="overflow-hidden dest-img-container">
-                        <img class="img-fluid" src="img/se.jpg" alt="">
+                        <img class="img-fluid" src="img/simba.jpg" alt="">
                     </div>
                     <div class="p-4">
                         <h5 class="mb-0">5 Days Great Migration Safari</h5>
@@ -502,7 +502,7 @@
                 <!-- Tour Item 4 -->
                 <div class="package-item">
                     <div class="overflow-hidden dest-img-container">
-                        <img class="img-fluid" src="img/punda.jpg" alt="">
+                        <img class="img-fluid" src="img/photo1.jpeg" alt="">
                     </div>
                     <div class="p-4">
                         <h5 class="mb-0">10 Days Exclusive Serengeti Safari</h5>
