--- a/destination-ngorongoro.html
+++ b/destination-ngorongoro.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <title>Ngorongoro Conservation Area - Kilimora Adventures</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Ngorongoro, Crater, Safari, Tanzania, Wildlife" name="keywords">
-    <meta content="Explore the Ngorongoro Crater, a UNESCO World Heritage Site and natural wonder of Africa."
-        name="description">
+    <meta content="Serengeti, Migration, Safari, Tanzania" name="keywords" content="Ngorongoro, Crater, Safari, Tanzania, Wildlife">
+    <meta content="Experience the endless plains of Serengeti National Park and the Great Migration."
+        name="description" content="Explore the Ngorongoro Crater, a UNESCO World Heritage Site and natural wonder of Africa.">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -131,7 +131,7 @@
     <div class="container-fluid position-relative p-0">
         <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
             <a href="" class="navbar-brand p-0">
-                <img src="img/logo1.png" alt="Tembea Africa Logo" width="100%">
+                <img src="img/logo_kilimora.png" alt="Tembea Africa Logo" width="100%">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars"></span>
@@ -190,7 +190,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-8 d-flex align-items-center justify-content-center">
-                                    <img src="img/logo1.png" alt="Kilimora Adventures" class="img-fluid"
+                                    <img src="img/logo_kilimora.png" alt="Kilimora Adventures" class="img-fluid"
                                         style="max-height: 250px; object-fit: contain;">
                                 </div>
                             </div>
@@ -339,19 +339,15 @@
             </div>
         </nav>
     </div>
-
     <div class="container-fluid bg-primary py-5 mb-5 hero-header"
         style="background: linear-gradient(rgba(20, 20, 31, .7), rgba(20, 20, 31, .7)), url(img/ngo.jpg); background-position: center center; background-repeat: no-repeat; background-size: cover;">
         <div class="container py-5">
             <div class="row justify-content-start py-5">
                 <div class="col-lg-6 pt-lg-5 mt-lg-5 text-start">
-                    <h6 class="text-white mb-2 animated slideInDown" style="letter-spacing: 2px;">NGORONGORO
+                    <h6 class="text-white mb-2 animated slideInDown" style="letter-spacing: 2px;">SERENEGETI
                         DESTINATIONS</h6>
                     <h1 class="text-white mb-3 animated slideInDown" style="font-size: 3rem;">NGORONGORO</h1>
-                    <p class="fs-6 text-white mb-4 animated slideInDown">
-                        Discover the Ngorongoro Crater, the world's largest inactive volcanic caldera and a UNESCO World
-                        Heritage Site teeming with incredible wildlife.
-                    </p>
+                    <p class="fs-6 text-white mb-4 animated slideInDown">Descend into the world's largest inactive volcanic caldera, a natural amphitheater teeming with wildlife and stunning geological formations.</p>
                 </div>
             </div>
         </div>
@@ -367,30 +363,23 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="img-border">
-                        <img class="img-fluid" src="img/twiga.jpg" alt="Serengeti Map">
+                        <img class="img-fluid" src="img/ngoro22.jpeg" alt="Serengeti Map">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="h-100">
                         <div class="d-flex align-items-center mb-4">
                             <span class="section-title-line"></span>
-                            <h2 class="mb-0">About Ngorongoro</h2>
+                            <h2 class="mb-0">About Ngorongoro Crater</h2>
                         </div>
-                        <p class="mb-4">The Ngorongoro Conservation Area is a UNESCO World Heritage Site located in
-                            northern Tanzania. At its heart lies the Ngorongoro Crater, the world's largest inactive,
-                            intact volcanic caldera, formed when a giant volcano exploded and collapsed on itself some
-                            2-3 million years ago.</p>
-                        <p class="mb-4">The crater floor covers 260 square kilometers (100 square miles) and is home to
-                            approximately 25,000 large animals, including the highest density of predators in Africa. It
-                            is one of the few places where you can see the endangered black rhinoceros in their natural
-                            habitat, making it a prime destination for witnessing the Big Five.</p>
-                    </div>
+                        <p class="mb-4">The Ngorongoro Conservation Area constitutes a UNESCO World Heritage Site located 180 km (110 mi) west of Arusha in the Crater Highlands area of Tanzania. The conservation area is named after Ngorongoro Crater, a large volcanic caldera within the area.</p>
+                        <p class="mb-4">The crater, which formed when a large volcano exploded and collapsed on itself two to three million years ago, is 610 meters (2,000 feet) deep and its floor covers 260 square kilometers (100 square miles). It is home to a dense population of wildlife including the Big 5.</p></div>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- Highlights Section -->
+        <!-- Highlights Section -->
     <div class="container-xxl py-5 bg-light">
         <div class="container">
             <div class="d-flex align-items-center mb-5">
@@ -400,37 +389,37 @@
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="icon-box text-center">
-                        <i class="fa fa-mountain"></i>
-                        <h5>The Crater Floor</h5>
-                        <p class="mb-0">Descend 600m into the world's largest intact volcanic caldera.</p>
+                        <i class="fa fa-paw"></i>
+                        <h5>Big 5 Safari</h5>
+                        <p class="mb-0">One of the best places to see the Big 5 in a single day.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="icon-box text-center">
                         <i class="fa fa-camera"></i>
-                        <h5>Big 5 Safari</h5>
-                        <p class="mb-0">Home to Lions, Leopards, Elephants, Buffalo, and Rhinos.</p>
+                        <h5>Black Rhino</h5>
+                        <p class="mb-0">A sanctuary for the endangered Black Rhino.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="icon-box text-center">
                         <i class="fa fa-globe"></i>
-                        <h5>UNESCO World Heritage</h5>
-                        <p class="mb-0">A protected area of outstanding universal value.</p>
+                        <h5>Volcanic Caldera</h5>
+                        <p class="mb-0">The world's largest inactive, intact and unfilled volcanic caldera.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                     <div class="icon-box text-center">
                         <i class="fa fa-cloud"></i>
-                        <h5>Balloon Safaris</h5>
-                        <p class="mb-0">Float over the plains at sunrise for a unique perspective.</p>
+                        <h5>Maasai Culture</h5>
+                        <p class="mb-0">Witness the coexistence of Maasai herdsmen and wildlife.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.9s">
                     <div class="icon-box text-center">
                         <i class="fa fa-binoculars"></i>
                         <h5>Bird Watching</h5>
-                        <p class="mb-0">Over 500 bird species recorded in the park.</p>
+                        <p class="mb-0">Flamingos in Lake Magadi and diverse avian life.</p>
                     </div>
                 </div>
             </div>
@@ -448,7 +437,7 @@
                 <!-- Tour Item 1 -->
                 <div class="package-item">
                     <div class="overflow-hidden dest-img-container">
-                        <img class="img-fluid" src="img/t4.jpg" alt="">
+                        <img class="img-fluid" src="img/ngo.jpg" alt="">
                     </div>
                     <div class="p-4">
                         <h5 class="mb-0">3 Days Classic Serengeti Safari</h5>
@@ -466,7 +455,7 @@
                 <!-- Tour Item 2 -->
                 <div class="package-item">
                     <div class="overflow-hidden dest-img-container">
-                        <img class="img-fluid" src="img/t2.jpg" alt="">
+                        <img class="img-fluid" src="img/pro3.jpg" alt="">
                     </div>
                     <div class="p-4">
                         <h5 class="mb-0">4 Day Serengeti Safari Game Package</h5>
@@ -484,7 +473,7 @@
                 <!-- Tour Item 3 -->
                 <div class="package-item">
                     <div class="overflow-hidden dest-img-container">
-                        <img class="img-fluid" src="img/se.jpg" alt="">
+                        <img class="img-fluid" src="img/tembo10.jpeg" alt="">
                     </div>
                     <div class="p-4">
                         <h5 class="mb-0">5 Days Great Migration Safari</h5>
@@ -568,25 +557,26 @@
                     Combine with Nearby Destinations
                 </h2>
                 <p class="dest-subtitle">
-                    Extend your safari adventure by visiting these iconic destinations near Serengeti.
+                    Extend your safari adventure by visiting these iconic destinations near Ngorongoro.
                 </p>
             </div>
 
             <!-- Ngorongoro Block -->
+            
+            <!-- Serengeti Block -->
             <div class="row align-items-center mb-5">
                 <div class="col-lg-6 position-relative">
-                    <img src="img/ngo.jpg" class="img-fluid rounded main-img" alt="Ngorongoro Crater">
-                    <img src="img/ngoro22.jpeg" class="img-fluid rounded small-img shadow-lg" alt="Ngorongoro View">
+                    <img src="img/nyumbu-migrate.jpeg" class="img-fluid rounded main-img" alt="Serengeti Plains">
+                    <img src="img/simba.jpg" class="img-fluid rounded small-img shadow-lg" alt="Lion">
                 </div>
                 <div class="col-lg-6">
-                    <h3 class="dest-country">Ngorongoro Crater</h3>
+                    <h3 class="dest-country">Serengeti National Park</h3>
                     <div class="dest-underline"></div>
                     <p class="dest-text">
-                        Descend into the world's largest inactive volcanic caldera, a natural amphitheater teeming with
-                        wildlife. The Ngorongoro Crater is a UNESCO World Heritage Site where you can witness the Big 5
-                        in a single day against a backdrop of stunning geological formations.
+                        The endless plains of the Serengeti are the stage for the Great Migration. Witness millions of
+                        wildebeest, zebras, and predators in this world-renowned ecosystem.
                     </p>
-                    <a href="destination-kenya.html" class="dest-btn">â†’ EXPLORE NGORONGORO</a>
+                    <a href="destination-serengeti.html" class="dest-btn">→ EXPLORE SERENGETI</a>
                 </div>
             </div>
 
@@ -594,7 +584,7 @@
             <div class="row align-items-center mb-5 flex-lg-row-reverse">
                 <div class="col-lg-6 position-relative">
                     <img src="img/treelion.jpg" class="img-fluid rounded main-img" alt="Tree Climbing Lions">
-                    <img src="img/destination-4.jpg" class="img-fluid rounded small-img shadow-lg" alt="Lake Manyara">
+
                 </div>
                 <div class="col-lg-6">
                     <h3 class="dest-country">Lake Manyara</h3>
@@ -612,7 +602,7 @@
             <div class="row align-items-center mb-5">
                 <div class="col-lg-6 position-relative">
                     <img src="img/tarangire.jpg" class="img-fluid rounded main-img" alt="Tarangire Elephants">
-                    <img src="img/tembo.jpg" class="img-fluid rounded small-img shadow-lg" alt="Baobab Area">
+
                 </div>
                 <div class="col-lg-6">
                     <h3 class="dest-country">Tarangire National Park</h3>
@@ -630,7 +620,7 @@
             <div class="row align-items-center mb-5 flex-lg-row-reverse">
                 <div class="col-lg-6 position-relative">
                     <img src="img/beach.jpg" class="img-fluid rounded main-img" alt="Zanzibar Beach">
-                    <img src="img/kili.jpg" class="img-fluid rounded small-img shadow-lg" alt="Stone Town">
+
                 </div>
                 <div class="col-lg-6">
                     <h3 class="dest-country">Zanzibar Island</h3>
@@ -647,7 +637,7 @@
         </div>
     </section>
 
-    <!-- FAQ Section -->
+        <!-- FAQ Section -->
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
@@ -658,50 +648,44 @@
                 <div class="col-lg-10">
                     <div class="accordion" id="accordionExample">
                         <div class="accordion-item">
-                            <h2 class="accordion-header" id="headingOne">
-                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                    When is the best time to visit Serengeti?
+                            <h2 class="accordion-header" id="heading1">
+                                <button class="accordion-button " type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapse1" aria-expanded="true" aria-controls="collapse1">
+                                    When is the best time to visit Ngorongoro?
                                 </button>
                             </h2>
-                            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                            <div id="collapse1" class="accordion-collapse collapse show" aria-labelledby="heading1"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    The best time depends on what you want to see. For the <strong>Great Migration river
-                                        crossings</strong>, June to October is ideal (North). For <strong>calving
-                                        season</strong> (baby wildebeest), visiting Ndutu (South) from January to March
-                                    is recommended.
+                                    Wildlife viewing inside the crater is excellent <strong>year-round</strong>. However, the dry season (June to October) is often preferred.
                                 </div>
                             </div>
                         </div>
                         <div class="accordion-item">
-                            <h2 class="accordion-header" id="headingTwo">
+                            <h2 class="accordion-header" id="heading2">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                    How many days do I need?
+                                    data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
+                                    Do I need a 4x4 vehicle?
                                 </button>
                             </h2>
-                            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                            <div id="collapse2" class="accordion-collapse collapse " aria-labelledby="heading2"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    We recommend at least <strong>3 to 4 days</strong> to truly appreciate the vastness
-                                    of the Serengeti and increase your chances of seeing the Big 5 and the Migration.
+                                    <strong>Yes</strong>, a 4x4 safari vehicle is mandatory for descending into the Ngorongoro Crater due to the steep terrain.
                                 </div>
                             </div>
                         </div>
                         <div class="accordion-item">
-                            <h2 class="accordion-header" id="headingThree">
+                            <h2 class="accordion-header" id="heading3">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                    What is the "Big 5"?
+                                    data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
+                                    Can I see the Big 5 here?
                                 </button>
                             </h2>
-                            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                            <div id="collapse3" class="accordion-collapse collapse " aria-labelledby="heading3"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    The "Big 5" refers to the Lion, Leopard, Rhinoceros, Elephant, and Cape Buffalo. The
-                                    Serengeti is one of the few places where you can see all of them in their natural
-                                    habitat.
+                                    <strong>Absolutely</strong>. The Ngorongoro Crater is one of the few places in Africa where you have a very high chance of seeing all of the Big 5 in a single day.
                                 </div>
                             </div>
                         </div>
@@ -711,7 +695,7 @@
         </div>
     </div>
 
-        <!-- Footer Start -->
+    <!-- Footer Start -->
     <!-- Awards Section (Auto Scrolling) -->
     <section class="py-5" style="background:#fff;">
         <div class="container text-center mb-4">
